# serialization

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  build.sh
cmake_modules/: FindCppUnit.cmake  uninstall.cmake
src/: CMakeLists.txt  main.cpp
src/serial/: CMakeLists.txt  byte_array.cpp  byte_array.hpp  byte_stream.cpp  byte_stream.cpp.autosave  byte_stream.hpp
src/tests/: CMakeLists.txt
src/tests/byte_array_tests/: CMakeLists.txt  byte_array_test_suite.cpp  byte_array_test_suite.hpp  main.cpp
src/tests/byte_stream_tests/: CMakeLists.txt  byte_stream_test_suite.cpp  byte_stream_test_suite.hpp
src/tests/common/: common.hpp
